<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/Relativelayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/name" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="1dp"
        android:layout_toEndOf="@id/name"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:layout_alignRight="@id/name"
        android:layout_centerHorizontal="false"
        android:layout_marginTop="40dp"
        android:text="@string/Password" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editName"
        android:layout_centerVertical="false"
        android:layout_marginStart="4dp"
        android:layout_marginTop="-2dp"
        android:layout_toEndOf="@id/password"
        android:ems="10"
        android:inputType="textPassword"
        android:minHeight="48dp" />

    <CheckBox
        android:id="@+id/rememberCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editName"
        android:layout_alignRight="@id/editName"
        android:layout_marginTop="-59dp"
        android:text="@string/Remember" />

</RelativeLayout>